Add REST API, Docker packaging, and indexed select/benchmark support.
Extend the file-based engine with Spring Boot endpoints, parallel shard select queries, a benchmark harness, and a short README.