@@ -6,10 +6,15 @@ import model.TableSchema;
 
 import java.io.*;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 class DatabaseExplorer {
+    private static final Map<String, CachedSchema> TABLE_SCHEMA_CACHE = new HashMap<>();
+
     public static List<String> getDatabases() {
         List<String> databases = new ArrayList<>();
         File dbsFolder = new File(Constants.STORAGE_LOC);
@@ -36,9 +41,13 @@ class DatabaseExplorer {
                 return tables;
             }
             for (File file : files) {
+                if (!file.isFile()) {
+                    continue;
+                }
+
                 String fileName = file.getName();
                 if (fileName.endsWith("_0.data")) {
-                    tables.add(fileName.split("_")[0]);
+                    tables.add(fileName.substring(0, fileName.length() - "_0.data".length()));
                 }
             }
         }
@@ -53,11 +62,25 @@ class DatabaseExplorer {
             throw new Exception("Schema file does not exist");
         }
 
-        String schemaFileJson = new String(Files.readAllBytes(schemaFile.toPath()));
+        Path schemaPath = schemaFile.toPath();
+        long lastModified = schemaFile.lastModified();
+        long fileSize = schemaFile.length();
+        String cacheKey = schemaPath.toAbsolutePath().normalize().toString();
+        CachedSchema cachedSchema = TABLE_SCHEMA_CACHE.get(cacheKey);
+        if (cachedSchema != null && cachedSchema.lastModified == lastModified && cachedSchema.fileSize == fileSize) {
+            return cachedSchema.tableSchema;
+        }
+
+        String schemaFileJson = Files.readString(schemaPath);
         Gson gson = new GsonBuilder()
                 .registerTypeAdapter(ColumnSchema.class, new ColumnSchemaTypeAdapter())
                 .create();
 
-        return gson.fromJson(schemaFileJson, TableSchema.class);
+        TableSchema tableSchema = gson.fromJson(schemaFileJson, TableSchema.class);
+        TABLE_SCHEMA_CACHE.put(cacheKey, new CachedSchema(tableSchema, lastModified, fileSize));
+        return tableSchema;
+    }
+
+    private record CachedSchema(TableSchema tableSchema, long lastModified, long fileSize) {
     }
 }
